Fixed button text overflow bug

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -42,8 +42,11 @@ h4 {
 
 button {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   margin: 15px auto;
+  padding: 5px;
+  text-align: center;
   border: 2px solid #f49674;
   background-color: rgba(252, 247, 248, 0.85);
   color: #f49674;
@@ -60,9 +63,9 @@ button:hover {
   color: #3e6481;
 }
 
-div {
+/* div {
   border: 1px solid green;
-}
+} */
 
 /*****Backgrounds*****/
 
